<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_black"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:background="@color/block"
        android:gravity="center">

        <Button
            android:id="@+id/back_all_pages"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/custom_current_button"
            app:backgroundTint="@null"
            android:textSize="20sp"
            android:text="@string/back"
            android:visibility="gone"/>
        
        <EditText
            android:id="@+id/search_input"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginHorizontal="32dp"

            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/search_icon"
            android:drawableTint="@color/white"
            android:drawablePadding="16dp"

            android:hint="@string/search"
            android:maxLines="1"
            android:inputType="text"

            android:textAlignment="textStart"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="22sp" />

    </LinearLayout>

    <GridView
        android:id="@+id/idGVcourses"
        android:layout_width="match_parent"
        android:layout_height="507dp"

        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:layout_marginBottom="0dp"
        android:horizontalSpacing="6dp"
        android:numColumns="2"
        android:padding="8dp"
        android:scrollbars="vertical"
        android:verticalSpacing="6dp" />

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/gray_normal"
        android:gravity="center" >

        <Button
            android:id="@+id/start_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:textSize="16sp"
            android:text="@string/prev"/>
        <Button
            android:id="@+id/left_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_current_button"
            app:backgroundTint="@null"
            android:textSize="16sp"
            android:text="1"/>
        <Button
            android:id="@+id/center_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:textSize="16sp"
            android:text="2"/>
        <Button
            android:id="@+id/rigth_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:textSize="16sp"
            android:text="3"/>
        <Button
            android:id="@+id/end_button"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:baselineAligned="false"
            android:textSize="16sp"
            android:text="@string/next"/>

    </LinearLayout>

</RelativeLayout>