<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_black"
    tools:context=".AboutCharacter">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:background="@color/block"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="4dp"
            android:layout_marginHorizontal="16dp"

            android:background="@drawable/custom_input"

            android:text="@string/about_character_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:background="@color/grey_blue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"

                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <ImageView
                android:id="@+id/image"
                android:layout_width="220dp"
                android:layout_height="220dp"
                android:layout_gravity="center" />
            <TextView
                android:id="@+id/status_species"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:drawableStart="@drawable/point_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="8dp"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:drawableStart="@drawable/gender_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="7dp"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:drawableStart="@drawable/location_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="9dp"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:drawableStart="@drawable/episode_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"

                android:text="@string/episodes_title"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/episode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />
            <TextView
                android:id="@+id/created"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:drawableStart="@drawable/created_icon"
                android:drawableTint="@color/white"
                android:drawablePadding="10dp"

                android:text=""
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@color/gray_normal"
        android:gravity="center" >

        <Button
            android:id="@+id/back_to_pages"
            android:layout_width="80dp"
            android:layout_height="55dp"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/custom_button"
            app:backgroundTint="@null"
            android:textSize="24sp"
            android:text="@string/prev"/>

    </LinearLayout>

</RelativeLayout>